# SigilSmith

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  TRADEMARKS.md
.github/: FUNDING.yml
.github/workflows/: release.yml
.rpm/: sigilsmith.spec
docs/: INSTALL.md  PUBLISH.md  RELEASE.md  SUPPORT.md  curseforge-listing.md  nexus-readme.txt  release_body.md
modforge/: modforge-listing.md  publish-checklist.md
packaging/: README.md  build-appimage.sh  build-packages.sh  sigilsmith.desktop
scripts/: release_notes.sh
src/: app.rs  backup.rs  bg3.rs  cli.rs  config.rs  deploy.rs  game.rs  importer.rs  library.rs  main.rs  metadata.rs  native_pak.rs  sigillink.rs  smart_rank.rs  ui.rs  update.rs
