[package]
name = "sigilsmith"
version = "0.7.0"
edition = "2021"
description = "Native Linux TUI mod loader for Baldur's Gate 3."
license = "Apache-2.0"
readme = "README.md"

[dependencies]
anyhow = "1.0.86"
arboard = "3.4.1"
blake3 = "1.5.3"
crossterm = "0.28.1"
directories = "5.0.1"
filetime = "0.2.23"
flate2 = "1.0.30"
larian-formats = "0.3.0"
lz4_flex = "0.11.1"
quick-xml = { version = "0.31.0", features = ["serialize"] }
ratatui = "0.27.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
sevenz-rust = "0.6.1"
sha2 = "0.10.8"
thiserror = "1.0.63"
time = { version = "0.3.36", features = ["formatting", "macros", "parsing"] }
ureq = { version = "2.9.7", features = ["json"] }
walkdir = "2.5.0"
zip = "2.1.3"
zstd = "0.13.2"

[package.metadata.deb]
maintainer = "SigilSmith <support@example.com>"
copyright = "2025 SigilSmith"
license-file = "LICENSE"
depends = "$auto"
section = "games"
priority = "optional"
assets = [
  ["target/release/sigilsmith", "usr/bin/sigilsmith", "755"],
  ["packaging/sigilsmith.desktop", "usr/share/applications/sigilsmith.desktop", "644"],
  ["packaging/icons/sigilsmith.svg", "usr/share/icons/hicolor/scalable/apps/sigilsmith.svg", "644"],
]

[package.metadata.rpm]
package = "sigilsmith"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
sigilsmith = { path = "/usr/bin/sigilsmith" }

[package.metadata.rpm.files]
"sigilsmith.desktop" = { path = "/usr/share/applications/sigilsmith.desktop" }
"icons" = { path = "/usr/share/icons/hicolor/scalable/apps" }
